
2010-06-15
  Bumped versionCode for release (24)
  Bumped versionName to: 1.3.9
  Renamed YammerReply to YammerReplyActivity
    Cleaned up code
  Moved reply window to top instead of center

2010-06-09
  Refactored message reply
  Moved message finding code into Message model.

2010-06-08
  Bumped versionName to: 1.3.8
  Fixed NPE bug under 2.1-u1

2010-06-06
  Bumped versionName to: 1.3.7
  Cleaned up code in TweetListAdapter
  Added code to clean message list before switching feeds.
  Removed unused methods
  Fixed CalledFromWrongThreadException
  Improved cursor management.

2010-06-03
  Bumped versionName to: 1.3.6
  Models no longer throw exception when unable to insert
  Removed duplicate last message update code

2010-06-02
  Bumped versionName 1.3.5 for release
  Worked around for posting bug in OAuthClient.
    OAuthClient.invoke throws an exception unless the return code is 200 OK.
    Posting a message returns a code of 201 Created.
  YammerActivity no longer does a full reload after a post.
    Added YammerActivity.updateMessages to just get new messages
  Shortened the reload after post delay to 500ms.
  Message.save no longer throws exception on failed insert.

2010-05-30
  Bumped versionName 1.3.4 for release
  Feed switch bug fix.
  Message reload bug fix.
    Use messages table to determine last message instead of network.last_message_id.
  Wrap CursorIndexOutOfBoundsException in YammerDataException
    Reload networks if we receive a YammerDataException while loading messages
  Cannonical nework switch bug fix.
  More code cleanup.

2010-05-27
  Bumped versionName 1.3.3 for release
  Network switch bug fix
  No feeds on first login bug fix
  Notification bug fix

2010-05-26
  Bumped versionName 1.3.2 for release
  Authentication flow bug fix
  Added test plan file

2010-05-24
  Bumped versionName 1.3.1 for release
  Imported trace source instead of using jars.
    I may want to log handled exceptions.