@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.yammer.v1"
-      android:versionCode="24"
-      android:versionName="1.3.9">
+      android:versionCode="25"
+      android:versionName="1.3.10">
 
 	<!--
 		Permissions 
@@ -84,5 +84,12 @@
         			/>
     </application>
     
-    <uses-sdk android:minSdkVersion="3" />
+    <uses-sdk android:minSdkVersion="4" />
+    
+	<supports-screens
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+	/>
+        
 </manifest> 
