@@ -9,6 +9,6 @@
 
 apk-configurations=
 # Project target.
-target=android-3
+target=android-4
 # Indicates whether an apk should be generated for each density.
 split.density=false
