@@ -1,4 +1,7 @@
 
+2010-08-27
+  Enabled small screens
+
 2010-06-15
   Bumped versionCode for release (24)
   Bumped versionName to: 1.3.9
